[tool.poetry]
name = "authenticgrouchyparameters"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
Flask-Cors = "^3.0.10"
cloudscraper = "^1.2.58"
psutil = "^5.8.0"
aioeos = "^1.0.2"
cryptography = "^35.0.0"
grequests = "^0.6.0"
pyotp = "^2.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
